# a1menu

./: CMakeLists.txt  README.md  how_to_build.txt  license.txt  makefile-gtk3  manual_installation.txt  unpackdeb.sh
src/: a1menu.pro  a1menu.res.gz.h  applet.cpp  applet.h  application.cpp  application.h  applicationloader.cpp  applicationloader.h  categoryloader.cpp  categoryloader.h  config.cpp  config.h  configmap.cpp  configmap.h  ctx.cpp  ctx.h  desktoprec.h  enums.h  guicombobox.cpp  guicombobox.h  guihotkeyfield.cpp  guihotkeyfield.h  guiitem.cpp  guiitem.h  guilist.cpp  guilist.h  guiparametersform.cpp  guiparametersform.h  guisearchbox.cpp  guisearchbox.h  guitoolbar.cpp  guitoolbar.h  guiwidget.h  guiwindow.cpp  guiwindow.h  imgconv.cpp  imgconv.h  inotifymonitor.cpp  inotifymonitor.h  installer.cpp  (+43 more)
src/css/: a1menu-black.css  a1menu-default.css
src/install/: a1menu.spec  common.mk  control-amd64  control-i386  fixlibs.sh  install.sh  makedeb.sh  makefile-gtk2  org.mate.applets.a1menu.mate-panel-applet  org.mate.panel.applet.a1menu.gschema.xml  org.mate.panel.applet.a1menu.service  postinst  prebuild.sh  unpackdeb.sh
src/loader/: applicationloader.cpp  applicationloader.h  categoryloader.cpp  categoryloader.h  iconloader.cpp  iconloader.h  loader.cpp  loader.h
src/po/: a1menu-gtk.pot  pl.po  run.sh
src/po/pl/LC_MESSAGES/: a1menu-gtk.mo  a1menu-gtk.po
src/ts/: trans-pl_PL.qm  trans-pl_PL.ts
